# bref

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
benchmarks/: benchmark_parse.py  data.bref
bref/: __init__.py  cli.py  converter.py  parser.py  utils.py
bref-2/: __init__.py  ast.py  converter.py  materializer.py  parser.py  utils.py
bref-py/: __init__.py
brefpy/: __init__.py  cli.py
commands/: commands.md  defaults.md
examples/simple/: data.bref  data.json  main.py
src/: conversion.rs  lib.rs  parser.rs  types.rs  utils.rs
src/tests/: parser_tests.rs
tests/: conftest.py  helpers.py  test_arrays.py  test_basic.py  test_invalid_data.py  test_nested_types.py  test_simple_types.py  test_type_references.py
tests/data/: 11_default_value_end.bref  12_default_value_middle.bref  13_type_definition_mismatch_inline.bref  14_missing_data_end.bref  15_missing_album_data.bref  16_nested_defaults.bref  17_mixed_defaults.bref  1_simple_type.bref  2_inline_type.bref  3_all_data_types.bref  3_array_type.bref  5_nested_inline_schema.bref  6_array_type.bref  6_default_values.bref  7_key_value_pairs.bref  8_type_definition_mismatch.bref  9_nested_inline_schema.bref  all_data_types.bref  array.bref  nested_array.bref  simple.bref  value_definitions.bref
