[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bref"
version = "0.1.0"
description = "A compact data format parser"
authors = [{name="ömer faruk ayvaz"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
